# cabal-detailed-quickcheck

./: CHANGELOG.md  README  README.md  cabal-detailed-quickcheck.cabal
lib/Distribution/TestSuite/: QuickCheck.hs
tests/: Tests.hs
