cabal-version:      2.4
name:               cabal-detailed-quickcheck
version:            0.1.0.0
--synopsis:           
--description:
--homepage:
--bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anselm Schüler
maintainer:         mail@anselmschueler.com
--copyright:
category:           Testing
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Distribution.TestSuite.QuickCheck
    --other-modules:
    --other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      QuickCheck ^>=2.14.2
    hs-source-dirs:   lib
    default-language: Haskell2010
