cabal-version:      3.4
name:               cabal-detailed-quickcheck
version:            0.2.0.1
synopsis:           QuickCheck for Cabal tests
description:        Turn QuickCheck properties into detailed Cabal tests
homepage:           https://github.com/schuelermine/cabal-detailed-quickcheck
bug-reports:        https://github.com/schuelermine/cabal-detailed-quickcheck/issues
license:            MIT
license-file:       LICENSE
author:             Anselm Schüler
maintainer:         mail@anselmschueler.com
copyright:          Ⓒ Anselm Schüler 2022
category:           Testing
extra-source-files: CHANGELOG.md
                    README.md

tested-with:
    GHC == 9.4.8, GHC == 9.8.2, GHC == 9.10.1

common basic-config
    build-depends:      
        base >=4&&<5,
        QuickCheck >=2.14.2 && <2.16,
        Cabal >=3.6&&<3.13
    default-language:   GHC2021
    ghc-options:
      -Wall
      -Wno-incomplete-uni-patterns
      -fprint-potential-instances
      -haddock
      -Winvalid-haddock


library
    import: basic-config
    exposed-modules:    Distribution.TestSuite.QuickCheck
    hs-source-dirs:     lib

Flag test
  Description: Enable debug support
  Default:     False
  Manual:      True


Test-Suite test
    import: basic-config
    if flag(test)
      buildable: True
    else
      buildable: False
    hs-source-dirs:   tests
    build-depends: cabal-detailed-quickcheck
    type:             detailed-0.9
    test-module:      Tests

source-repository head
    type:               git
    location:           https://github.com/schuelermine/cabal-detailed-quickcheck.git
    branch:             b0

source-repository this
    type:               git
    location:           https://github.com/schuelermine/cabal-detailed-quickcheck.git
    tag:                0.2.0.1
